--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="history">
-            <h2>Calculation History</h2>
+            <h2>History</h2>
             <table id="historyTable">
                 <thead>
                     <tr>
@@ -51,13 +51,14 @@
                     </tr>
                 </thead>
                 <tbody id="historyList">
-                    <!-- History entries will be added here -->
+                    
                 </tbody>
             </table>
         </div>
+        <hr>
 
         <div class="info-section mt-5">
-            <h3 class="mt-4">How can you calculate GST with this tool?</h3>
+            <h3>How can you calculate GST with this tool?</h3>
             <div class="calculation-steps p-3 bg-light border rounded">
                 <ol>
                     <li>Enter the price of the goods or services in the Amount field.</li>
@@ -67,23 +68,24 @@
                 <p>If the price you've entered is inclusive of tax, the tool automatically calculates, and displays the original price of the goods or service after subtracting the GST.</p>
                 <p>If the price you've entered is exclusive of tax, the tool automatically calculates, and displays the gross price after adding the GST.</p>
             </div>
-            <h2 class="text-center">GST - Goods and Services Tax</h2>
-            <p class="text-center">GST is levied on goods and services and has replaced other indirect taxes that were in effect before it came into use.</p>
-            <h3 class="mt-4">There are four types of GST active in India. They are:</h3>
+            <hr>
+            <h2>GST - Goods and Services Tax</h2>
+            <p class="text-center">GST was implemented mainly to bring about uniformity in tax collection. In the GST regime, tax is collected cumulatively at the end stage of production of goods or services. There are five slabs to collect GST that are 5%, 12%, 18% and 28%, and different goods and services fall under different tax slabs. Additionally, there are goods that do not attract any GST.</p>
+            <h3>There are four types of GST active in India. They are:</h3>
             <div class="gst-types d-flex flex-wrap">
-                <div class="gst-type p-3 m-2 bg-light border rounded">
+                <div class="gst-type">
                     <h4 class="text-primary">CGST</h4>
                     <p>Central Goods and Services Tax, or CGST is collected by the central government for intra-state supply of goods and services and is governed by the CGST act.</p>
                 </div>
-                <div class="gst-type p-3 m-2 bg-light border rounded">
+                <div class="gst-type ">
                     <h4 class="text-primary">SGST</h4>
                     <p>State Goods and Services Tax, or SGST is collected by the state government for intra-state supply of goods and services and is governed by the SGST act.</p>
                 </div>
-                <div class="gst-type p-3 m-2 bg-light border rounded">
+                <div class="gst-type">
                     <h4 class="text-primary">IGST</h4>
                     <p>Integrated Goods and Services Tax, or IGST is collected by the central government on inter-state supply of goods and services as well as imports.</p>
                 </div>
-                <div class="gst-type p-3 m-2 bg-light border rounded">
+                <div class="gst-type">
                     <h4 class="text-primary">UTGST</h4>
                     <p>Union Territory Goods and Services Tax, or UTGST is applicable on supply of goods or services that take place in any of the seven union territories in India.</p>
                 </div>
