--- a/index.html
+++ b/index.html
@@ -37,24 +37,23 @@
                 <p id="totalAmount" class="text-success"></p>
             </div>
         </div>
-        <div class="history">
-            <h2>History</h2>
-            <table id="historyTable">
-                <thead>
-                    <tr>
-                        <th>SR No</th>
-                        <th>Amount</th>
-                        <th>GST Type (%)</th>
-                        <th>Tax Type</th>
-                        <th>GST Amount</th>
-                        <th>Total Amount</th>
-                    </tr>
-                </thead>
-                <tbody id="historyList">
-                    
-                </tbody>
-            </table>
-        </div>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Serial No</th>
+                    <th>Amount</th>
+                    <th>GST Type</th>
+                    <th>Tax Type</th>
+                    <th>Actual Amount</th>
+                    <th>GST Amount</th>
+                    <th>Total Amount</th>
+                </tr>
+            </thead>
+            <tbody id="historyList">
+                <!-- History entries will go here -->
+            </tbody>
+        </table>
+       
         <hr>
 
         <div class="info-section mt-5">
