--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="info-section mt-5">
             <h3>How can you calculate GST with this tool?</h3>
-            <div class="calculation-steps p-3 bg-light border rounded">
+            <div class="calculation-steps">
                 <ol>
                     <li>Enter the price of the goods or services in the Amount field.</li>
                     <li>Enter the percentage of GST, or the slab that the product comes under, in the GST % field.</li>
