--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <h1> GST Calculator</h1>
+        <p class="subheading">Introducing a free GST calculator made just for small businesses! With this tool, you'll be able to calculate GST in minutes without any complex math.</p>
         <div class="calculator">
             <div class="form">
                 <label for="amount">Amount</label>
@@ -30,8 +31,8 @@
                     <option value="inclusive">Inclusive</option>
                 </select>
             </div>
-            <button class="btn btn-success btn-block" onclick="calculateGST()">Calculate GST</button>
-            <div class="output mt-4">
+            <button class="btn" onclick="calculateGST()">Calculate GST</button>
+            <div class="output">
                 <p id="actualAmount" class="text-success"></p>
                 <p id="gstAmount" class="text-success"></p>
                 <p id="totalAmount" class="text-success"></p>
@@ -40,7 +41,7 @@
         <div class="gst-type">
             <h2>History</h2>
             <div class="table-container">
-                <table border="1">
+                <table >
                     <thead>
                         <tr>
                             <th>Serial No</th>
@@ -79,7 +80,7 @@
             <h2>GST - Goods and Services Tax</h2>
             <p class="text-center">GST was implemented mainly to bring about uniformity in tax collection. In the GST regime, tax is collected cumulatively at the end stage of production of goods or services. There are five slabs to collect GST that are 5%, 12%, 18% and 28%, and different goods and services fall under different tax slabs. Additionally, there are goods that do not attract any GST.</p>
             <h3>There are four types of GST active in India. They are:</h3>
-            <div class="gst-types d-flex flex-wrap">
+            <div class="gst-types">
                 <div class="gst-type">
                     <h4 class="text-primary">CGST</h4>
                     <p>Central Goods and Services Tax, or CGST is collected by the central government for intra-state supply of goods and services and is governed by the CGST act.</p>
