--- a/history.html
+++ b/history.html
@@ -8,21 +8,24 @@
 </head>
 <body>
     <div class="container">
-        <h1>History</h1>
-        <table id="historyTable">
-            <thead>
-                <tr>
-                    <th>Sr No</th>
-                    <th>Amount</th>
-                    <th>GST Type</th>
-                    <th>Tax Type</th>
-                    <th>Actual Amount</th>
-                    <th>GST Amount</th>
-                    <th>Total Amount</th>
-                </tr>
-            </thead>
-            <tbody id="historyList"></tbody>
-        </table>
+        <h2>History</h2>
+        <div class="table-container">
+            <table >
+                <thead>
+                    <tr>
+                        <th>Serial No</th>
+                        <th>Amount</th>
+                        <th>GST Type</th>
+                        <th>Tax Type</th>
+                        <th>Actual Amount</th>
+                        <th>GST Amount</th>
+                        <th>Total Amount</th>
+                    </tr>
+                </thead>
+                <tbody id="historyList">
+                    
+                </tbody>
+            </table>
         <a href="index.html" class="back-link">Back to Calculator</a>
     </div>
     <script>
