changed names to with gst without gst

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="form">
                 <label for="taxType">Tax</label>
                 <select class="form-control" id="taxType">
-                    <option value="exclusive">Without GST</option>
-                    <option value="inclusive">With GST</option>
+                    <option value="Without GST">Without GST</option>
+                    <option value="With GST">With GST</option>
                 </select>
             </div>
             <div class="form">
