--- a/history.html
+++ b/history.html
@@ -26,7 +26,9 @@
                     
                 </tbody>
             </table>
-        <a href="index.html" class="back-link">Back to Calculator</a>
+            <div class="button-container">
+              <a href="index.html" class="back-link">Back to Calculator</a>
+            </div>
     </div>
     <script>
         function loadHistoryFromCookie() {
