--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <li>Enter the percentage of GST, or the slab that the product comes under, in the GST % field.</li>
                     <li>Choose if the price that you entered is inclusive or exclusive of tax in the Tax field.</li>
                 </ol>
-                <p>If the price you've entered is inclusive of tax, the tool automatically calculates, and displays the original price of the goods or service after subtracting the GST.</p>
+                <p> the price you've entered is inclusive of tax, the tool automatically calculates, and displays the original price of the goods or service after subtracting the GST.</p>
                 <p>If the price you've entered is exclusive of tax, the tool automatically calculates, and displays the gross price after adding the GST.</p>
             </div>
 
