added warning and media queries

--- a/history.html
+++ b/history.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <h2>History</h2>
+        <h1>History</h1>
+        <p class="note">Warning!!!  Currently history is stored in website cookies hence maximum 20 entries are registered.</p>
         <div class="table-container">
             <table >
                 <thead>
                     <tr>
                         <th>Serial No</th>
                         <th>Amount</th>
-                        <th>GST Type</th>
+                        <th>GST Type %</th>
                         <th>Tax Type</th>
                         <th>Actual Amount</th>
                         <th>GST Amount</th>
