--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <tr>
                             <th>Serial No</th>
                             <th>Amount</th>
-                            <th>GST Type</th>
+                            <th>GST Type %</th>
                             <th>Tax Type</th>
                             <th>Actual Amount</th>
                             <th>GST Amount</th>
@@ -57,7 +57,7 @@
                     </tbody>
                 </table>
                 <div class="button-container">
-                    <a href="history.html" class="history-button">View Full History</a>
+                    <a href="history.html" class="history-button">View History</a>
                 </div>
             </div>
      </div>
@@ -73,8 +73,9 @@
                     <li>Enter the percentage of GST, or the slab that the product comes under, in the GST % field.</li>
                     <li>Choose if the price that you entered is inclusive or exclusive of tax in the Tax field.</li>
                 </ol>
-                <p> the price you've entered is inclusive of tax, the tool automatically calculates, and displays the original price of the goods or service after subtracting the GST.</p>
+                <p>If the price you've entered is inclusive of tax, the tool automatically calculates, and displays the original price of the goods or service after subtracting the GST.</p>
                 <p>If the price you've entered is exclusive of tax, the tool automatically calculates, and displays the gross price after adding the GST.</p>
+                <p class="note">Warning!!!  Currently history is stored in website cookies hence maximum 20 entries are registered.</p>
             </div>
 
             <hr>
