added delete all button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 </table>
                 <div class="button-container">
                     <a href="history.html" class="history-button">View History</a>
+                    <button id="deleteAllBtn">Delete All</button>
                 </div>
             </div>
      </div>
